[package]
name = "causalgraphs"
version = "0.1.0"
edition = "2021"

[lib]
name = "causalgraphs"
crate-type = ["cdylib"]

[dependencies]
# Core graph library from rustworkx (pure Rust, on crates.io)
rustworkx-core = "0.14"

# You already imported petgraph and ahash for utilities:
petgraph = "0.6"
ahash    = "0.8"
indexmap = "2.0"

# PyO3 for the Python binding
pyo3 = { version = "0.20", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.20"
