[package]
name = "causalgraphs"
version = "0.1.0"
edition = "2021"

[lib]
name = "causalgraphs"
# Dynamic crate-type based on features
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:pyo3-build-config"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:serde", "dep:serde-wasm-bindgen"]

[dependencies]
# Core dependencies (always included)
rustworkx-core = "0.14"
petgraph = "0.6"
indexmap = "2.0"

# Python-specific dependencies (only for python feature)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# WASM-specific dependencies (only for wasm feature)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# UUID and getrandom dependencies (for both features)
uuid = { version = "1.13", features = ["v4", "rng-getrandom"] }
getrandom_v03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }

[build-dependencies]
pyo3-build-config = { version = "0.20", optional = true }

# WASM-specific profile
[profile.release]
# Optimize for size when building for WASM
opt-level = "s"
lto = true