[package]
name = 'rcausalgraphs'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'rcausalgraphs'

[dependencies]

# rust_core = { git = "https://github.com/pgmpy/causalgraphs.git", branch = "main", package = "rust_core" }

# For local development, comment out the Git line above and uncomment this:
rust_core = { path = "../../../../rust_core" }

extendr-api = '*'
